--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-router-dom": "^5.1.0",
     "ionicons": "^4.6.3",
     "pouchdb": "^7.1.1",
+    "pouchdb-find": "^7.1.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router": "^5.1.0",
