--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@ionic/react-router": "^4.11.0",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.12",
+    "@types/pdfmake": "^0.1.9",
     "@types/pouchdb-upsert": "^2.2.6",
     "@types/react": "^16.9.5",
     "@types/react-dom": "^16.9.1",
     "@types/react-router": "^5.1.1",
     "@types/react-router-dom": "^5.1.0",
     "ionicons": "^4.6.3",
+    "pdfmake": "^0.1.63",
     "pouchdb": "^7.1.1",
     "pouchdb-find": "^7.1.1",
     "pouchdb-upsert": "^2.2.0",
