--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/pouchdb-upsert": "^2.2.6",
     "@types/react": "^16.9.5",
     "@types/react-dom": "^16.9.1",
+    "@types/react-phone-number-input": "^3.0.0",
     "@types/react-router": "^5.1.1",
     "@types/react-router-dom": "^5.1.0",
     "ionicons": "^4.6.3",
@@ -20,6 +21,7 @@
     "pouchdb-upsert": "^2.2.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-phone-number-input": "^3.0.15",
     "react-router": "^5.1.0",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.2.0",
