--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
     "ionicons": "^4.6.3",
     "pdfmake": "^0.1.63",
     "pouchdb": "^7.1.1",
+    "pouchdb-authentication": "^1.1.3",
     "pouchdb-find": "^7.1.1",
     "pouchdb-upsert": "^2.2.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router": "^5.1.0",
     "react-router-dom": "^5.1.0",
-    "react-scripts": "3.2.0",
-    "typescript": "3.6.3"
+    "react-scripts": "^3.3.0",
+    "typescript": "3.6.3",
+    "url-parse": "^1.4.7"
   },
   "scripts": {
     "start": "react-scripts start",
