--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-phone-number-input": "^3.0.0",
     "@types/react-router": "^5.1.1",
     "@types/react-router-dom": "^5.1.0",
+    "bcrypt-nodejs": "0.0.3",
     "ionicons": "^4.6.3",
     "pdfmake": "^0.1.63",
     "pouchdb": "^7.1.1",
