--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-phone-number-input": "^3.0.0",
     "@types/react-router": "^5.1.1",
     "@types/react-router-dom": "^5.1.0",
+    "base-64": "^0.1.0",
     "bcrypt-nodejs": "0.0.3",
     "ionicons": "^4.6.3",
     "pdfmake": "^0.1.63",
@@ -27,7 +28,8 @@
     "react-router": "^5.1.0",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.2.0",
-    "typescript": "3.6.3"
+    "typescript": "3.6.3",
+    "utf8": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
